--- a/javaPipelineTemplate/Jenkinsfile
+++ b/javaPipelineTemplate/Jenkinsfile
@@ -1,11 +1,10 @@
-// Simple JTE template: delegates to `javaProject` library
 pipeline {
   agent any
   stages {
     stage('Run Java Project Pipeline') {
       steps {
         script {
-          javaProject.build()
+          build()
         }
       }
     }
